--- a/src/static/scss/index.scss
+++ b/src/static/scss/index.scss
@@ -7,6 +7,9 @@
 @import './form-input.scss';
 @import './grid.scss';
 @import './categories.scss';
+@import './slider.scss';
+@import './product.scss';
+@import './footer.scss';
 
 html {
     font-size: 10px;
@@ -25,6 +28,6 @@ body {
 
 .container {
     max-width: 120rem;
-    padding: 0 1.2rem;
+    padding: 0 1.5rem;
     margin: 0 auto;
 }
