first prod commit

--- a/src/static/scss/_vars.scss
+++ b/src/static/scss/_vars.scss
@@ -1,5 +1,7 @@
 $mainColor: #FF0303;
 $blackColor: #253D4E;
+$mainShadowColor: #ffb4b4;
+$greyColor: #ADADAD;
 
 .row{
     display: flex;
@@ -9,3 +11,4 @@ $blackColor: #253D4E;
     display: grid;
     width: 100%;
 }
+
