--- a/src/static/scss/categories.scss
+++ b/src/static/scss/categories.scss
@@ -18,7 +18,7 @@
         cursor: pointer;
 
         &:hover {
-            color: darken($blackColor, 5);
+            color: darken($blackColor, 1);
         }
 
         @media screen and(max-width:550px) {
@@ -44,9 +44,12 @@
     border-radius: 3px;
     cursor: pointer;
     padding: 15px 43px;
+    transition: 0.2s ease;
 
     &:hover {
-        background-color: darken(#FFFFFF, 5);
+        background-color: darken(#FFFFFF, 1);
+        transform: scale(1.02);
+        transition: 0.2s ease;
     }
 }
 
