--- a/src/static/scss/header.scss
+++ b/src/static/scss/header.scss
@@ -2,6 +2,14 @@
     width: 100%;
     z-index: 100;
     position: fixed;
+
+    &__sized-box{
+        height: 164.14px;
+
+        @media screen and (max-width: 768px) {
+            height: 78px;
+        }
+    }
 }
 
 .topHeader{
@@ -15,6 +23,7 @@ backdrop-filter: blur(30px);
         display: block;
         margin-left:15px;
         font-weight:500;
+        color: $blackColor;
         @media screen and (max-width: 600px) {
             display: none;
         }
@@ -34,7 +43,7 @@ backdrop-filter: blur(30px);
 
 .bottomHeader{
     background: rgba(255, 255, 255, 0.92);
-backdrop-filter: blur(30px);
+    backdrop-filter: blur(30px);
     padding: 1.7rem 0;
     border-bottom: 1px #adadad23 solid;
     width: 100%;
@@ -55,6 +64,15 @@ backdrop-filter: blur(30px);
         margin: 0 12px;
         color: $blackColor;
         cursor: pointer;
+
+        &:hover{
+            color: #FF0303;
+            opacity: 0.5;
+        }
+    }
+
+    &__item--active{
+        color:$mainColor;
     }
 
     &__item-title{
@@ -68,6 +86,10 @@ backdrop-filter: blur(30px);
     &__item-phone{
         font-size: 18px;
         color:$mainColor;
+    }
+
+    @media screen and (max-width:768px) {
+        display: none;
     }
 }
 
