--- a/src/static/scss/product.scss
+++ b/src/static/scss/product.scss
@@ -4,17 +4,35 @@
     box-sizing: border-box;
     border-radius: 3px;
     width: 100%;
+    position: relative;
     cursor: pointer;
     display: block;
+    transition: 0.2s ease;
 
     &:hover{
-        background: darken(#FFFFFF,2);
+        background: darken(#FFFFFF,1);
         box-shadow: 1px 1px 11px rgba(0, 0, 0, 0.05);
+        transform: scale(1.02);
+        transition: 0.2s ease;
     }
 }
 
 .product__content {
     padding: 12px 10px;
+}
+
+.product__like{
+    position: absolute;
+    top:10px;
+    right:10px;
+    z-index: 102;
+    width: 20px;
+    height: 20px;
+    cursor: pointer;
+}
+
+.product__like:active {
+    transform: scale(1.2);
 }
 
 .product__item-img {
@@ -59,4 +77,21 @@
     font-size: 18px;
     line-height: 22px;
     color: #FF0303;
+}
+
+.product__item-price-instock-without{
+    height: 40px;
+    display: flex;
+    align-items: center;
+}
+
+.product__row{
+    display: grid;
+    grid-template-columns: repeat(auto-fill,minmax(210px,1fr));
+    grid-gap:20px;
+}
+.product__favorites{
+    @media screen and (max-width:768px) {
+        margin-top: 40px;
+    }
 }
