--- a/src/static/scss/slider.scss
+++ b/src/static/scss/slider.scss
@@ -14,10 +14,11 @@
     }
 }
 
+
 .slider__arrow-left {
     position: absolute;
     top: 50%;
-    left: -20px;
+    left: -60px;
     z-index: 2;
 
     @media screen and(max-width:700px) {
@@ -28,10 +29,43 @@
 .slider__arrow-right {
     position: absolute;
     top: 50%;
-    right: -20px;
+    right: -60px;
     z-index: 2;
 
     @media screen and(max-width:700px) {
         right: -8px;
     }
+}
+
+
+.slider__arrow-right.inbox{
+    right: 10px;
+}
+
+.slider__arrow-left.inbox{
+    left: 10px;
+}
+
+.swiper-pagination-bullet-active{
+    background-color: $mainColor;
+}
+
+.slider_backgound-img{
+    background-size: cover;
+    position: relative;
+    &::after {
+        content: "";
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        background: linear-gradient(90deg, rgba(0, 0, 0, 0.7) 0%, rgba(0, 0, 0, 0.11) 100%);
+        z-index: 1;
+        top:0;
+        left:0;
+    }
+}
+
+.slider__content{
+    z-index: 2;
+    position: relative;
 }
