--- a/src/static/scss/menu-modal.scss
+++ b/src/static/scss/menu-modal.scss
@@ -10,19 +10,20 @@
 
 
     &__item {
-        padding: 5px;
+        padding:12px 15px;
         font-weight: 700;
         color: $blackColor;
+        border-radius: 3px;
         cursor: pointer;
         font-size: 16px;
 
         &:hover {
-            background-color: #ff030393;
+            background-color: #d7d7d7;
             color: white;
         }
 
         &--active {
-            background-color: #ff030393;
+            background-color: #ff0303;
             color: white;
         }
 
