--- a/src/static/scss/product.scss
+++ b/src/static/scss/product.scss
@@ -9,8 +9,12 @@
     display: block;
     transition: 0.2s ease;
 
+}
+
+.product__item-wrapper{
+    position: relative;
+    transition: 0.2s ease;
     &:hover{
-        background: darken(#FFFFFF,1);
         box-shadow: 1px 1px 11px rgba(0, 0, 0, 0.05);
         transform: scale(1.02);
         transition: 0.2s ease;
